OCECREATIV-2027 - Spacing issue with h3s as the first item in a column. Set the top margin to 0.

--- a/CancerGov/_src/StyleSheets/_general.scss
+++ b/CancerGov/_src/StyleSheets/_general.scss
@@ -73,6 +73,9 @@ table caption {
 	margin-bottom: 1em;
 }
 
+.row .columns + h3 {
+	top-margin: 0;
+}
 /* begin default content table styling */
 table.table-default {
 	border-collapse: collapse;
